--- a/styles.css
+++ b/styles.css
@@ -390,3 +390,10 @@ h5 {
   list-style-type: none;
   padding-left: 20px;  
 }
+
+#jneath_body {
+  background-color: #d3d3d3;
+  border-style: solid;
+  border-width: 2px;
+  text-align: center;
+}
